--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   graphql_flutter: ^5.1.2
-  card_swiper: ^2.0.4
   get: ^4.6.5
   sizer: ^2.0.15
   flutter_bounceable: ^1.1.0
   flip_card: ^0.7.0
   flutter_svg: ^2.0.4
+  flutter_carousel_slider: ^1.1.0
 
 dev_dependencies:
   flutter_test:
